# OpenCV-learn

./: .gitconfig  .gitignore  ML.sublime-workspace  tesseract.js
AndrewNgEx/coursera/: .gitignore  list.txt
AndrewNgEx/coursera/ex1/: computeCost.m  computeCostMulti.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  normalEqn.m  plotData.m  tok  token.mat
AndrewNgEx/coursera/ex2/: costFunction.m  costFunctionReg.m  plotData.m  predict.m  token.mat
AndrewNgEx/coursera/ex3/: lrCostFunction.m  oneVsAll.m  predict.m  predictOneVsAll.m
AndrewNgEx/coursera/ex4/: nnCostFunction.m  randInitializeWeights.m  sigmoidGradient.m
AndrewNgEx/coursera/ex5/: ex5.m  learningCurve.m  linearRegCostFunction.m  polyFeatures.m  validationCurve.m
AndrewNgEx/coursera/ex6/: dataset3Params.m  gaussianKernel.m  processEmail.m
AndrewNgEx/coursera/ex7/: computeCentroids.m  findClosestCentroids.m  pca.m  projectData.m
AndrewNgEx/coursera/ex8/: cofiCostFunc.m  estimateGaussian.m  selectThreshold.m
AndrewNgEx/openclassroom/: costFunc.m  ex3.m  ex4-fminunc.m  ex4.m  ex5Lin.m  ex5Log.m  linear.m  logistic.m
AndrewNgEx/openclassroom/ex6-NaiveBayes/: getData.sh  test.m  train.m
AndrewNgEx/openclassroom/ex7-LinearSVM/: .gitignore  getData.sh  getLibsvm.sh  twofeature.m
AndrewNgEx/openclassroom/ex8-NonLinearSVM/: ex8.m  getData.sh
AndrewNgEx/openclassroom/ex9-K-Means/: kmeans-peper.m  kmeans.m
MATLAB-ml/01_Linear_Regression/: gradient_descend.m  multivariate_learn.m  normal_equations.m
MATLAB-ml/02_Logistic_Regression/: Logistic_Regression.m  note.txt
MATLAB-ml/03_Regularization/: regularized_logistic.m  regularized_normal_equation.m
MATLAB-ml/04_Sparse_Autoencoder/: checkNumericalGradient.m  display_network.m  sampleIMAGES.m  sparseAutoencoderCost.asv  sparseAutoencoderCost.m  train.m
MATLAB-ml/boosting-p300-eeg/: Pos32Electrodes.locs  crossValidation.m  example.m  note.txt  readme.asv  readme.txt
image-feature/: simple-kdtree.cpp
image-feature/robwhess-opensift/: Doxyfile  LICENSE  Makefile  README.md  beaver.sift  mainpage  note.txt
image-process/: BlurImage.cpp  CMakeLists.txt  LiveVideo.cpp  VideoWriter.cpp  Watershed.cpp  Watershed2.cpp  segment_objects.cpp  test_mser.cpp  test_stitch.cpp
image_OCR/opencv-ocr/: CMakeCache.txt  CMakeLists.txt  Makefile  character_recognition  cmake_install.cmake  cropped_word_recognition  cropped_word_recognition.cpp  end_to_end_recognition
image_OCR/python-ocr/: mser.py  ocr_alphabet.py
image_OCR/tesseract.js/: tesseract.js
image_stitch/qt-opencv/: cmakeline.sh  mainwindow.cpp  mainwindow.h
image_stitch/qt-sift_detect/: CMakeLists.txt  main.cpp  sift.h  sift_detect.pro  siftdetect.cpp  siftdetect.h  siftdetect.ui
image_stitch/qt-sift_match/: CMakeLists.txt  imgfeatures.c  kdtree.c  minpq.h  siftmatch.cpp  siftmatch.h  siftmatch.ui  xform.c
image_stitch/qt-sift_stitch/: Makefile  Makefile.Debug  Makefile.Release  feature1.txt  feature2.txt  main.cpp  minpq.h  sift.c  sift_match.pro  siftmatch.cpp  siftmatch.h  siftmatch.ui
opencv-ocr/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cropped_word_recognition.cpp  segmented_word_recognition  textdetection  webcam_demo
opencv-win/LearningOpenCV-win/: .gitignore  LearningOpenCV-win.sln
pedestrian/: notes.txt
pedestrian/CNN/: GetData_datareader.m  Testing.m  cnnexamples.asv  cnnexamples.m  cnnsetup3.asv  cnntrain.m  compile.m  dtAccS.cc  dtAccS.mexw64  fconvn.cc  fconvn.mexw64  testCNNAll.m  testCNNCaltechTest2.m  testCNNCaltechTest4.asv  testVideoImg.m
pedestrian/dbEval/: dbEval_new_CaltechTrain.m  dbEval_new_ETH.m  dbEval_new_INRIA.m  dbEval_new_INRIATest.m  dbEval_new_test.asv  dbEval_new_test.m  dbInfo.m  vbb.m  vbbPlayer.m
pedestrian/util/: visualizeMy.m
python-image/: PCA-mlabs.py  PCA-sklearn.py  PCA-steps.T.py  PCA-steps.py  numpy-fft.py  opencv-dft.py  take_akaze.py  test_fisheye.py
python-ocr/: mser.py  ocr_alphabet.py  tst_scene_render.py  video.py
qt-opencv/: CMakeLists.txt  hello.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scan_img.pro
qt-opencv-sift/: CMakeLists.txt
qt-sift_detect/: CMakeLists.txt  imgfeatures.c  main.cpp  sift_detect.pro  siftdetect.cpp  siftdetect.h  siftdetect.ui  utils.c
qt-sift_match/: CMakeLists.txt  kdtree.c  kdtree.h  main.cpp  minpq.h  sift.c  sift.h  siftmatch.cpp  siftmatch.h  siftmatch.ui  xform.c
qt-sift_stitch/: CMakeLists.txt  README  cmakeline.sh  imgfeatures.h  kdtree.h  minpq.h  siftmatch.cpp  siftmatch.h  siftmatch.ui  utils.c  utils.h  xform.h
rectification/RectifKitE/: rectifyImageS.m
rectification/RectifKitU/: License  compRectif.m  costRectif.m  ns.m
tesseract.js/: package.json  tesseract.js
testing_cuda/testVectorProduct/: Makefile  testVectorProduct.cu
(+93 files in other folders)
