cmake_minimum_required(VERSION 2.8)
project( TestOpenCV )
find_package( OpenCV )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( BlurImage BlurImage.cpp )
target_link_libraries( BlurImage ${OpenCV_LIBS} )
add_executable( LiveVideo LiveVideo.cpp )
target_link_libraries( LiveVideo ${OpenCV_LIBS} )
add_executable( VideoWriter VideoWriter.cpp )
target_link_libraries( VideoWriter ${OpenCV_LIBS} )
