cmake_minimum_required(VERSION 2.8)
project( TestOpenCV )
find_package( OpenCV )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( BlurImage BlurImage.cpp )
target_link_libraries( BlurImage ${OpenCV_LIBS} )
add_executable( LiveVideo LiveVideo.cpp )
target_link_libraries( LiveVideo ${OpenCV_LIBS} )
add_executable( VideoWriter VideoWriter.cpp )
target_link_libraries( VideoWriter ${OpenCV_LIBS} )
add_executable( Watershed Watershed.cpp )
target_link_libraries( Watershed ${OpenCV_LIBS} )
add_executable( Watershed2 Watershed2.cpp )
target_link_libraries( Watershed2 ${OpenCV_LIBS} )
add_executable( segment_objects segment_objects.cpp )
target_link_libraries( segment_objects ${OpenCV_LIBS} )
add_executable( test_mser test_mser.cpp )
target_link_libraries( test_mser ${OpenCV_LIBS} )
add_executable( test_stitch test_stitch.cpp )
target_link_libraries( test_stitch ${OpenCV_LIBS} )